All refactored